// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBoxInput renders a disabled input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iUQqn"
>
  <div
    class="sc-gKAaRy ezfMqp"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hcMLLM FormField__FormFieldBox-m9hood-0 ofKvz sc-fKgJPI hfiqMR"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 iWVaOa FormField__FormFieldContentBox-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 dkrLfA"
          disabled=""
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kWVPUo StyledCheckBox-sc-1dbk5ju-6 cKmmdu"
            disabled=""
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 kDgcfI"
              disabled=""
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 flLNDq StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fDXGLF"
              disabled=""
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders a simple input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iUQqn"
>
  <div
    class="sc-gKAaRy ezfMqp"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hcMLLM FormField__FormFieldBox-m9hood-0 ofKvz sc-fKgJPI hfiqMR"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 iWVaOa FormField__FormFieldContentBox-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jVOPKN"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kWVPUo StyledCheckBox-sc-1dbk5ju-6 cKmmdu"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 jnzfOg"
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 flLNDq StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fDXGLF"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders a toggle input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iUQqn"
>
  <div
    class="sc-gKAaRy ezfMqp"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hcMLLM FormField__FormFieldBox-m9hood-0 ofKvz sc-fKgJPI hfiqMR"
      tabindex="0"
    >
      <label
        class="StyledText-sc-1sadyjn-0 ZJQGZ"
      >
        A checkbox
      </label>
      <span
        class="StyledText-sc-1sadyjn-0 bmnpwp"
      >
        A helpful message
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 iWVaOa FormField__FormFieldContentBox-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jVOPKN"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kWVPUo StyledCheckBox-sc-1dbk5ju-6 cKmmdu"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 jnzfOg"
              tabindex="-1"
              type="checkbox"
            />
            <span
              class="StyledCheckBox__StyledCheckBoxToggle-sc-1dbk5ju-4 lbQSQG"
            >
              <span
                class="StyledCheckBox__StyledCheckBoxKnob-sc-1dbk5ju-5 IZlqf"
              />
            </span>
          </div>
          <span>
            Hi friends
          </span>
        </label>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 bTUvUa"
      >
        Some info
      </span>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders an input with a form field label 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iUQqn"
>
  <div
    class="sc-gKAaRy ezfMqp"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hcMLLM FormField__FormFieldBox-m9hood-0 ofKvz sc-fKgJPI hfiqMR"
      tabindex="0"
    >
      <label
        class="StyledText-sc-1sadyjn-0 ZJQGZ"
      >
        A brilliant input
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 iWVaOa FormField__FormFieldContentBox-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jVOPKN"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kWVPUo StyledCheckBox-sc-1dbk5ju-6 cKmmdu"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 jnzfOg"
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 flLNDq StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fDXGLF"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders an input with a help message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iUQqn"
>
  <div
    class="sc-gKAaRy ezfMqp"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hcMLLM FormField__FormFieldBox-m9hood-0 ofKvz sc-fKgJPI hfiqMR"
      tabindex="0"
    >
      <span
        class="StyledText-sc-1sadyjn-0 bmnpwp"
      >
        This is a very cool input
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 iWVaOa FormField__FormFieldContentBox-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jVOPKN"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kWVPUo StyledCheckBox-sc-1dbk5ju-6 cKmmdu"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 jnzfOg"
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 flLNDq StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fDXGLF"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders an input with a validation error 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iUQqn"
>
  <div
    class="sc-gKAaRy ezfMqp"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hcMLLM FormField__FormFieldBox-m9hood-0 ofKvz sc-fKgJPI hfiqMR"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 iWVaOa FormField__FormFieldContentBox-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jVOPKN"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kWVPUo StyledCheckBox-sc-1dbk5ju-6 cKmmdu"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 jnzfOg"
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 flLNDq StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fDXGLF"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 fnpEr"
      >
        You failed at this
      </span>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders an input with an info message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iUQqn"
>
  <div
    class="sc-gKAaRy ezfMqp"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hcMLLM FormField__FormFieldBox-m9hood-0 ofKvz sc-fKgJPI hfiqMR"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 iWVaOa FormField__FormFieldContentBox-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jVOPKN"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 kWVPUo StyledCheckBox-sc-1dbk5ju-6 cKmmdu"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 jnzfOg"
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 flLNDq StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fDXGLF"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 bTUvUa"
      >
        You can set a cool value
      </span>
    </div>
  </div>
</div>
`;
